<resources>
    <string name="app_name">Doctour</string>
    <string name="search">Поиск</string>
    <string name="all">Все</string>
    <string name="dentist">Дантист</string>
    <string name="eye_doctor">Окулист</string>
    <string name="pediatrician">Педиатр</string>
    <string name="found">Найдено</string>
    <string name="bishkek">Бишкек</string>
    <string name="osh">Ош</string>
    <string name="city">Город</string>
    <string name="filter">Фильтр</string>
    <string name="expert">Специалист</string>
    <string name="reset">Сброс</string>
    <string name="apply">Применить</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="des_splash_screen">Splash screen with logo picture</string>
    <string name="image">image</string>
    <string name="not_found_this_request">По Вашему запросу ничего не найдено</string>
    <string name="experience">Стаж работы </string>
    <string name="surgeon">Хирург</string>
    <string name="slash">|</string>
    <string name="nova_clinic">Nova clinic</string>
    <string name="_0_0">0.0</string>
    <string name="recomendation">(32 рекомендуют)</string>
    <string name="from">от</string>
    <string name="_1000">1000</string>
    <string name="c">C</string>
    <string name="ulanov_ulan">Уланов Улан</string>
    <string name="status">Статус -</string>
    <string name="yet_to_be">Предстоит</string>
    <string name="_01_03_2023">01.03.2023</string>
    <string name="_13_00">13:00</string>
    <string name="cancel">Отменить</string>
    <string name="re_schedule">Перезаписаться</string>
    <string name="no_pending_entries">У Вас нет предстоящих записей</string>
    <string name="my_records">Мои записи</string>
    <string name="_10_plus">10+</string>
    <string name="_150">150</string>
    <string name="_4_8">4.8</string>
    <string name="just_experince">стаж</string>
    <string name="just_rating">рейтинг</string>
    <string name="just_feedback">отзывов</string>
    <string name="info_about_doc">Информация о враче</string>
    <string name="info_about_doctor">Асанов Асан - врач флеболог, стаж 42 года. Специалист в абдоминальной хирургии, проктологии, флебологии, герниологии, работает в хирургии желчевыводящей системы с использование малоинвазивных пособий, имеет обширную герниологическую практику с использованием аллопластики, опыт работы в экстренной хирургии, опыт амбулаторной хирургии с использованием современных технологий.</string>
    <string name="feedbacks">Отзывы</string>
    <string name="register">Записаться</string>
    <string name="doctor_asanov">Врач Асанов Асан</string>
    <string name="_5">5</string>
    <string name="feedback_text">Врачи, которые очень квалифицированы и быстры в обслуживании. Я настоятельно рекомендую доктора Асана всем, кто хочет проконсультироваться</string>
    <string name="_46">46</string>
    <string name="_6_days_ago">6 дней назад</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="Name">Асанов Асан</string>
    <string name="workexperience">Стаж работы от 16 лет</string>
    <string name="xirurg">Хирург |</string>
    <string name="nameClinic">Nova clinic</string>
    <string name="score">4.8</string>
    <string name="recommendation">( 32 рекомендуют)</string>
    <string name="ot">от</string>
    <string name="sum">1000</string>
    <string name="name_profile">Асанова Айзада</string>
    <string name="medical">Медицинские осмотры!</string>
    <string name="health_status">Регулярно проверяйте состояние своего здоровья</string>
    <string name="specialties_doctors">Специальности врачей</string>
    <string name="best_clinic">Лучшие клиники</string>
    <string name="best_doctors">Лучшие врачи</string>
    <string name="doctors">Специалисты</string>
    <string name="clinic">Клиники</string>
    <string name="Services">Услуги</string>
    <string name="My_Favorite">Мои Избранные</string>
    <string name="Далее">Далее</string>
    <string name="my_appoiments">Мои записи</string>
    <string name="upcoming">Предстоящий</string>
    <string name="cancelled">Отмененный</string>
    <string name="completed">Завершенный</string>
    <string name="position_not_found">"Position not found"</string>
    <string name="Main">Главная</string>
    <string name="Category">Категории</string>
    <string name="Appoiment">Запись</string>
    <string name="More">Еще</string>
    <string name="Change">Изменить</string>
    <string name="_01_02_2023">01.02.2023</string>
    <string name="Oops_failed_">Упс, не получилось!</string>
    <string name="Please_check_your_internet_connection">Пожалуйста, проверьте ваше подключение к</string>
    <string name="Then_try_again">Интернету, затем повторите попытку</string>
    <string name="Ready">Готово</string>
    <string name="Successfully">Успешно</string>
    <string name="Your_appoiment_has_been_changed">Ваша запись была изменена</string>
    <string name="Re_schedule">Перезаписаться</string>
    <string name="Select_the_date">Выберите дату</string>
    <string name="Select_the_time">Выберите время</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="Biometric_Login">Вход по биометрии</string>
    <string name="language">Язык</string>
    <string name="password">Пароль</string>
    <string name="biometric_entry">Вход по биометрии</string>
    <string name="push_notifications">Push-уведомления</string>
    <string name="exit">Выйти</string>
    <string name="fio">ФИО</string>
    <string name="gender">Пол</string>
    <string name="female">Женский</string>
    <string name="age">Возраст</string>
    <string name="_25">25</string>
    <string name="describe_your_problem">Опишите Вашу проблему</string>
    <string name="description">Описание</string>
    <string name="are_you_sure_you_want_to_exit">Вы уверены что хотите выйти из приложения?</string>
    <string name="back">Назад</string>
    <string name="yes_exit">Да, выйти</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="send">Отправить</string>
    <string name="would_you_recommend_the_doctor">Будете ли вы рекомендовать\nврача?</string>
    <string name="your_review">Ваш отзыв</string>
    <string name="write_your_review">Напишите свой отзыв</string>
    <string name="your_rating_is_very_dear_to_us">Ваша оценка очень важна для нас</string>
    <string name="leave_feedback">Оставить отзыв</string>
    <string name="name">Асанова Айзада</string>
    <string name="choose_language">Выберите язык</string>
    <string name="kyrgyz">Кыргызча</string>
    <string name="russian">Русский</string>
    <string name="_16_years">16 лет</string>
    <string name="Enroll">Записаться</string>
    <string name="Select_a_date">Выберите дату</string>
    <string name="Select_a_time">Выберите время</string>
    <string name="Next">Далее</string>
    <string name="Ops_failed">Упс, не получилось!</string>
    <string name="You_have_an_appoiment">Вы записались к хирургу Асанов Асан</string>
    <string name="write_your_review_toast">Напишите ваш отзыв</string>
    <string name="line_">Заполните поле</string>
    <string name="change_password">Новый пароль не должен совпадать с предыдущим</string>
    <string name="fio_">Введите ваше ФИО</string>
    <string name="change_passwordd">Изменить пароль</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="definition_of_geolocation">Определение геолокации</string>
    <string name="write_comment">Написать комментарий</string>
    <string name="categories">Категории</string>
    <string name="doctor">Врачи</string>
    <string name="whatsapp">Записаться через WhatsApp</string>
    <string name="date">06 мая 2023</string>
    <string name="feedback_32">(32 отзыва)</string>
    <string name="profile">Профиль</string>
    <string name="save">Сохранить</string>
    <string name="number">Номер телефона</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="current_password">Текущий пароль</string>
    <string name="popular_doctors">Популярные специалисты</string>
    <string name="delete_from_favorites">Удалить из избранного?</string>
    <string name="yes_delete">Да, удалить</string>
    <string name="choose_city">Выбрать город</string>
    <string name="on_clinic">On Clinic</string>
    <string name="network_of_clinics">Сеть клиник</string>
    <string name="create">Создать</string>
    <string name="password_has_been_reset">Ваш пароль был сброшен</string>
    <string name="uzi">УЗИ</string>
    <string name="code_exam">Проверка ОТР кода</string>
    <string name="_996_555_99">+996 704******77</string>
    <string name="repeat_send">Повторно отправить ОТР через</string>
    <string name="code_was_sent">ОТР код был отправлен на номер</string>
    <string name="via_sms">через SMS:</string>
    <string name="Write_feedback">Написать отзыв</string>
    <string name="Registration">Регистрация</string>
    <string name="Login">Авторизация</string>
    <string name="Sign_Up">Зарегистрироваться</string>
    <string name="Log_In">Войти</string>
    <string name="Number_of_phone">Номер телефона</string>
    <string name="Password">Пароль</string>
    <string name="tv_verify_code">Проверка кода подтверждения</string>
    <string name="repeat_send_code">Повторно отправить код через</string>
    <string name="Forgot_password">Забыли пароль?</string>
    <string name="Full_name">ФИО</string>
    <string name="Repeat_password">Повторите пароль</string>
    <string name="Creating_your_account_you_agree_to_our_terms_and_conditions">Создавая свою учетную запись, вы соглашаетесь с нашими Положениями и Условиями.</string>
    <string name="repeat_your_password">repeat your password</string>
    <string name="write_your_full_name">write your full name</string>
    <string name="write_your_number_of_phone">write your number of phone</string>
    <string name="write_your_password">write your password</string>
    <string name="Date_of_birthday">Дата рождения</string>
    <string name="Male">Мужской</string>
    <string name="Female">Женский</string>
    <string name="_20_04_2001">20.04.2001</string>
    <string name="Write_review">Написать отзыв</string>
    <string name="location_icon">location icon</string>
    <string name="Asanov_Asan">Асанов Асан</string>
    <string name="To_assesment_of_the_doctor">Оценить врача</string>
    <string name="_996_550_55_55_55">+996 (550) 55 - 55 - 55</string>
    <string name="_01_01_2000">01.01.2000</string>
    <string name="Create_PIN_code">Создайте PIN код</string>
    <string name="A">A</string>
    <string name="Chose_the_doctor">Выбрать врача</string>
    <string name="vector">vector</string>
    <string name="Add_pin_code_to_make_your_account_more_secure">Добавьте PIN-код, чтобы сделать вашу учетную запись более безопсаной</string>
    <string name="Reset_password">Восстановить пароль</string>
    <string name="The_recovery_code_will_be_sent_to_the_next_number">Код для восстановления будет отправлен на следующий номер</string>
    <string name="Create_new_password">Создайте новый пароль</string>
    <string name="New_password">Новый пароль</string>
    <string name="Repeat_your_password">Повторите пароль</string>
    <string name="resuscitator">реаниматолог</string>
    <string name="On_Clinic">On Clinic</string>
    <string name="symbol">symbol</string>
    <string name="Therapist">Терапевт</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="delete_accounts">Удалить аккаунт</string>
    <string name="cancellation">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="Delete">Удалить</string>
    <string name="Delete_account">Удалить аккаунт</string>
    <string name="second">секунд</string>
    <string name="_55">55</string>
</resources>