<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_circle_bg"
    android:orientation="vertical"
    android:id="@+id/id_bottom_sheet"
    android:paddingBottom="@dimen/_36dp">

    <View
        android:layout_width="@dimen/_56dp"
        android:layout_height="@dimen/_1dp"
        android:layout_gravity="center"
        android:background="@color/grey" />

    <TextView
        style="@style/simple_black_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_26dp"
        android:text="@string/filter" />

    <TextView
        style="@style/simple_black_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18dp"
        android:text="@string/expert" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/medium_white_text"
                android:layout_width="@dimen/_64dp"
                android:layout_height="@dimen/_26dp"
                android:layout_marginStart="@dimen/_16dp"
                android:background="@drawable/circle_tv_bg"
                android:gravity="center"
                android:text="@string/all" />

            <TextView
                style="@style/medium_parl_text"
                android:layout_width="@dimen/_96dp"
                android:layout_height="@dimen/_26dp"
                android:layout_marginStart="@dimen/_8dp"
                android:background="@drawable/circle_tv2_bg"
                android:gravity="center"
                android:text="@string/dentist" />

            <TextView
                style="@style/medium_parl_text"
                android:layout_width="@dimen/_96dp"
                android:layout_height="@dimen/_26dp"
                android:layout_marginStart="@dimen/_8dp"
                android:background="@drawable/circle_tv2_bg"
                android:gravity="center"
                android:text="@string/eye_doctor" />

            <TextView
                style="@style/medium_parl_text"
                android:layout_width="@dimen/_96dp"
                android:layout_height="@dimen/_26dp"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:background="@drawable/circle_tv2_bg"
                android:gravity="center"
                android:text="@string/pediatrician" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        style="@style/simple_black_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/city" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/medium_white_text"
                android:layout_width="@dimen/_64dp"
                android:layout_height="@dimen/_26dp"
                android:layout_marginStart="@dimen/_16dp"
                android:background="@drawable/circle_tv_bg"
                android:gravity="center"
                android:text="@string/bishkek" />

            <TextView
                style="@style/medium_parl_text"
                android:layout_width="@dimen/_96dp"
                android:layout_height="@dimen/_26dp"
                android:layout_marginStart="@dimen/_8dp"
                android:background="@drawable/circle_tv2_bg"
                android:gravity="center"
                android:text="@string/osh" />
        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_42dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_release"
            android:layout_width="@dimen/_142dp"
            android:layout_height="@dimen/_44dp"
            android:background="@drawable/reset_btn_bg"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:text="@string/reset"
            android:textColor="@color/parlament"
            android:textSize="@dimen/_16sp" />

        <TextView
            android:id="@+id/btn_apply"
            android:layout_width="@dimen/_142dp"
            android:layout_height="@dimen/_44dp"
            android:layout_marginStart="@dimen/_24dp"
            android:background="@drawable/apply_btn_bg"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp" />
    </LinearLayout>
</LinearLayout>
