<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="@dimen/_110dp"
        android:layout_height="@dimen/_110dp"
        android:layout_margin="@dimen/_16dp"
        android:src="@drawable/img"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/rounded_corners" />

    <TextView
        android:id="@+id/name"
        style="@style/simple_black_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="48dp"
        android:text="@string/app_name"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/_15dp"
        android:layout_height="@dimen/_15dp"
        android:layout_marginTop="@dimen/_21dp"
        android:layout_marginEnd="@dimen/_38dp"
        android:background="@drawable/img_1"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_240dp"
        android:layout_height="@dimen/_1dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_4dp"
        android:background="@color/grey"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/tv_experience"
        style="@style/small_black_text"
        android:layout_width="@dimen/_240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_1dp"
        android:text="@string/experience"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <TextView
        android:id="@+id/profession"
        style="@style/small_black_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_1dp"
        android:text="@string/surgeon"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/tv_experience" />

    <TextView
        android:id="@+id/slash"
        style="@style/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:text="@string/slash"
        app:layout_constraintStart_toEndOf="@id/profession"
        app:layout_constraintTop_toBottomOf="@id/tv_experience" />

    <TextView
        android:id="@+id/tv_clinic"
        style="@style/small_black_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_1dp"
        android:text="@string/nova_clinic"
        app:layout_constraintStart_toEndOf="@id/slash"
        app:layout_constraintTop_toBottomOf="@id/tv_experience" />

    <TextView
        android:id="@+id/rating"
        style="@style/small_black_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginTop="@dimen/_2dp"
        android:text="@string/_0_0"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/profession" />

    <ImageView
        android:layout_width="@dimen/_18dp"
        android:layout_height="@dimen/_17dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_2dp"
        android:contentDescription="@string/image"
        android:src="@drawable/img_2"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/profession" />

    <TextView
        android:id="@+id/recommendation"
        style="@style/small_black_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_2dp"
        android:text="@string/recomendation"
        app:layout_constraintStart_toEndOf="@id/rating"
        app:layout_constraintTop_toBottomOf="@id/tv_clinic" />

    <TextView
        android:id="@+id/tv_from"
        style="@style/small_black_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_4dp"
        android:text="@string/from"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/rating" />

    <TextView
        android:id="@+id/tv_price"
        style="@style/simple_parl_txt_without_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/_2dp"
        android:text="@string/_1000"
        app:layout_constraintStart_toEndOf="@id/tv_from"
        app:layout_constraintTop_toBottomOf="@id/rating" />

    <TextView
        style="@style/simple_parl_txt_without_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2dp"
        android:text="@string/c"
        app:layout_constraintStart_toEndOf="@id/tv_price"
        app:layout_constraintTop_toBottomOf="@id/recommendation" />
</androidx.constraintlayout.widget.ConstraintLayout>