<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_214dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_time_of_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:text="@string/_01_02_2023"
        style="@style/simple_black_text"
        android:layout_marginTop="@dimen/_16dp"
        android:visibility="gone"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="@dimen/_110dp"
            android:layout_height="@dimen/_110dp"
            android:layout_margin="@dimen/_16dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/rounded_corners" />

        <TextView
            android:id="@id/tv_name"
            style="@style/simple_black_text"
            android:layout_width="@dimen/_170dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_28dp"
            android:text="@string/ulanov_ulan"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/small_black_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/status"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_pred"
            style="@style/small_parl_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/blue_circle_bg"
            android:gravity="center"
            android:text="@string/yet_to_be"
            app:layout_constraintStart_toEndOf="@id/tv_status"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/small_black_text"
            android:layout_width="@dimen/_61dp"
            android:layout_height="@dimen/_28dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="22dp"
            android:text="@string/_01_03_2023"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/tv_status" />

        <TextView
            android:id="@+id/slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8dp"
            android:layout_marginTop="@dimen/_14dp"
            android:text="@string/slash"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_date"
            app:layout_constraintTop_toBottomOf="@id/tv_pred" />

        <TextView
            android:id="@+id/tv_time"
            style="@style/small_black_text"
            android:layout_width="@dimen/_36dp"
            android:layout_height="@dimen/_18dp"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_18dp"
            android:text="@string/_13_00"
            app:layout_constraintStart_toEndOf="@id/slash"
            app:layout_constraintTop_toBottomOf="@id/tv_pred" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            style="@style/simple_parl_text"
            android:layout_width="@dimen/_142dp"
            android:layout_height="@dimen/_40dp"
            android:layout_marginEnd="@dimen/_11dp"
            android:background="@drawable/circle_tv2_bg"
            android:gravity="center"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/btn_re_shedule"
            style="@style/simple_white_text"
            android:layout_width="@dimen/_142dp"
            android:layout_height="@dimen/_40dp"
            android:layout_marginStart="@dimen/_11dp"
            android:background="@drawable/circle_tv_bg"
            android:gravity="center"
            android:text="@string/re_schedule" />
    </LinearLayout>


</LinearLayout>