<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
<!--    tools:context=".presentation.ui.fragments.main.booking.BookingFailedFragment">-->

    <ImageView
        android:id="@+id/image_failed"
        android:layout_width="@dimen/_120dp"
        android:layout_height="@dimen/_120dp"
        android:layout_marginBottom="@dimen/_100dp"
        android:contentDescription="@string/image"
        android:src="@drawable/failed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_failed"
        style="@style/mega_black_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/Ops_failed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_failed" />

    <TextView
        android:id="@+id/tv_address"
        style="@style/small_black_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Please_check_your_internet_connection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_failed" />

    <TextView
        style="@style/small_black_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Then_try_again"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_address" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48dp"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_32dp"
        android:backgroundTint="@color/blue"
        android:text="@string/Ready"
        android:textAllCaps="false"
        android:textSize="@dimen/_16sp"
        app:cornerRadius="@dimen/_8dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>